--- a/css/styles.css
+++ b/css/styles.css
@@ -58,6 +58,19 @@ body {
   margin-left: auto;
   margin-right: auto;
 }
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
 /* =========== /Common styles =========== */
 
 /* =========== Page Header styles =========== */
@@ -161,7 +174,7 @@ body {
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url ('/images/hero/people-office.jpg');
+    url('/images/hero/people-office.jpg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -198,6 +211,7 @@ body {
   border-radius: 4px;
   padding: 16px 32px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .order-service-btn:hover,
@@ -207,19 +221,6 @@ body {
 /* =========== /Hero Section styles =========== */
 
 /* =========== Benefits Section styles =========== */
-.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  white-space: nowrap;
-  clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
-}
-
 .benefits {
   padding: 120px 0;
 }
@@ -231,6 +232,18 @@ body {
 
 .benefits-list-item {
   width: calc((100% - 72px) / 4);
+}
+
+.benefits-list-image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f4f4fd;
+  max-width: 264px;
+  height: 112px;
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+  margin-bottom: 8px;
 }
 
 .benefits-list-title {
@@ -255,12 +268,6 @@ body {
   padding: 120px 0;
 }
 
-.team .container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
 .team-list {
   display: flex;
   gap: 24px;
@@ -270,6 +277,8 @@ body {
   background-color: #ffffff;
   width: calc((100% - 72px) / 4);
   border-radius: 0px 0px 4px 4px;
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
 .team-card-content {
@@ -291,18 +300,44 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
   text-align: center;
+  margin-bottom: 8px;
+}
+
+.team-list-social-media {
+  display: flex;
+  gap: 24px;
+  justify-content: center;
+}
+
+.team-list-social-media-item {
+  width: 40px;
+  height: 40px;
+}
+
+.team-list-social-media-link {
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.team-list-social-media-link:hover,
+.team-list-social-media-link:focus {
+  background-color: #404bbf;
+}
+
+.team-list-social-media-icon {
+  fill: #f4f4fd;
 }
 /* =========== /Team Section styles =========== */
 
 /* =========== Portfolio Section styles =========== */
 .portfolio {
   padding: 120px 0;
-}
-
-.portfolio .container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 
 .portfolio-list {
@@ -314,6 +349,41 @@ body {
 
 .portfolio-list-item {
   width: calc((100% - 48px) / 3);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-list-item:hover,
+.portfolio-list-item:focus {
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+}
+
+.portfolio-list-item:hover .overlay {
+  transform: translateY(0%);
+}
+
+.portfolio-list-img-replace {
+  position: relative;
+  overflow: hidden;
+  width: 360px;
+  height: 300px;
+}
+
+.overlay {
+  padding: 40px 32px;
+  color: #f4f4fd;
+  background-color: #4d5ae5;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-card-content {
@@ -344,6 +414,15 @@ body {
   padding: 100px 0;
 }
 
+.footer-container {
+  display: flex;
+}
+
+.footer-logo-container {
+  max-width: 264px;
+  margin-right: 120px;
+}
+
 .page-footer-logo {
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
@@ -356,16 +435,58 @@ body {
   margin-bottom: 16px;
 }
 
+.footer-accent-color {
+  color: #f4f4fd;
+  padding-bottom: 16px;
+}
+
 .page-footer-text {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
-  max-width: 264px;
 }
 
-.footer-accent-color {
-  color: #f4f4fd;
-  padding-bottom: 16px;
+.footer-social-media-container {
+  max-width: 208px;
+}
+
+.footer-social-media-text {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #fff;
+  margin-bottom: 16px;
+}
+
+.footer-social-media {
+  display: flex;
+  gap: 16px;
+}
+
+.footer-social-media-item {
+  width: 40px;
+  height: 40px;
+}
+
+.footer-social-media-link {
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-social-media-link:hover,
+.footer-social-media-link:focus {
+  background-color: #31d0aa;
+}
+
+.footer-social-media-icon {
+  fill: #f4f4fd;
 }
 /* =========== /Footer styles =========== */
